--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build:dev": "webpack --env mode=development --config ./config/webpack/webpack.config.ts",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "lint:scss": "npx stylelint \"**/*.scss\"",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "lint:scss": "npx stylelint \\\\\\\"**/*.scss\\\\\\\" --config config/stylelint/stylelint.config.js",
+    "lint:scss:fix": "npx stylelint \\\\\\\"**/*.scss\\\\\\\" --fix config/stylelint/stylelint.config.js",
     "test": "jest --config ./config/jest/jest.config.ts"
   },
   "dependencies": {
