--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest --config ./config/jest/jest.config.ts"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "compose-function": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
