--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "my-spotify-web",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config ./config/webpack/webpack.config.ts",
-    "build:prod": "webpack --env mode=production --config ./config/webpack/webpack.config.ts",
-    "build:dev": "webpack --env mode=development --config ./config/webpack/webpack.config.ts",
+    "start": "webpack serve --config webpack.config.ts",
+    "build:prod": "webpack --env mode=production --config webpack.config.ts",
+    "build:dev": "webpack --env mode=development --config webpack.config.ts",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "lint:scss": "npx stylelint \\\\\\\"**/*.scss\\\\\\\" --config config/stylelint/stylelint.config.js",
-    "lint:scss:fix": "npx stylelint \\\\\\\"**/*.scss\\\\\\\" --fix config/stylelint/stylelint.config.js",
-    "test": "jest --config ./config/jest/jest.config.ts"
+    "lint:scss": "npx stylelint \\\\\\\\\\\\\\\"**/*.scss\\\\\\\\\\\\\\\" --config stylelint.config.js",
+    "lint:scss:fix": "npx stylelint \\\\\\\\\\\\\\\"**/*.scss\\\\\\\\\\\\\\\" --fix stylelint.config.js",
+    "test": "jest --config jest.config.ts"
   },
   "dependencies": {
     "clsx": "^1.2.1",
@@ -24,7 +24,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@svgr/webpack": "^8.0.1",
     "@types/compose-function": "^0.0.30",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/webpack-bundle-analyzer": "^4.6.0",
