--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-typescript": "^7.22.5",
     "@svgr/webpack": "^8.0.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/compose-function": "^0.0.30",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.14",
